Fixes static IDE editor controller name not being updated during refactoring.

--- a/views/IDE.html
+++ b/views/IDE.html
@@ -10,7 +10,7 @@
 <div id="editor"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
-<script src="IDEeditor.js"></script>
+<script src="IDE.js"></script>
 
 <button id = "run-code" type="button" onclick="runCode()">run code</button>
 
