--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,12 @@
 <body>
 	<h1>Click here to go to the IDE</h1>>
 	<a href="/IDE"> IDE editor</a>
+	
+	<h1>Click here to go to test problem 1</h1>>
+	<a href="/problem?problemID=test_problem1"> test 1</a>
+	
+	<h1>Click here to go to test problem 2</h1>>
+	<a href="/problem?problemID=test_problem2"> test 2</a>
 	</body>
 </html>
 
