--- a/views/problem.html
+++ b/views/problem.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<title>Programming Challenge Template</title>
+	<link rel="stylesheet" type="text/css" href="IDE.css">
 </head>
 <body>
 	<div id="problem">
 		<h1 id="title"></h1>
 		<pre id="content"></h1>
 	</div>
-	<div id="IDE"></div>
+	<div id="ide"></div>
 	<script src="problem.js"></script>
 </body>
 </html>
