--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="/login.css"> 
+  <script src="/navbar.js"></script>
 </head>
 <body>
+  <div id="navbar-container"></div>
   <h1>Login</h1>
-  <form action="/" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+  <form action="/postLogin" method="post"> 
+    <label for="email">Email:</label>
+    <input type="text" id="email" name="email" required>
     <br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
