added navbar to all pages and fixed navbar overlap

--- a/views/IDE.html
+++ b/views/IDE.html
@@ -3,10 +3,10 @@
 <head>
 	<title>GatorBytes</title>
 	<link rel="stylesheet" type="text/css" href="IDE.css">
+	<script src="/navbar.js"></script>
 </head>
 <body>
-
-<h1>GatorBytes</h1>
+	<div id="navbar-container"></div>
 	<div id="ide">
 		<div id="editor"></div>
 
