--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang ="en">
 <head>
-
 	<title>GatorBytes</title>>
+	<script src="/navbar.js"></script>
 </head>
 <body>
+	<div id="navbar-container"></div>
 	<h1>Click here to go to the IDE</h1>>
 	<a href="/IDE"> IDE editor</a>
 	
