--- a/views/problem.html
+++ b/views/problem.html
@@ -3,8 +3,10 @@
 <head>
 	<title>Programming Challenge Template</title>
 	<link rel="stylesheet" type="text/css" href="IDE.css">
+	<script src="/navbar.js"></script>
 </head>
 <body>
+	<div id="navbar-container"></div>
 	<div id="problem">
 		<h1 id="title"></h1>
 		<pre id="content"></h1>
