--- a/views/sandbox.html
+++ b/views/sandbox.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Gatorbytes - Programming Challenges</title>
+	<title>GatorBytes - Sandbox</title>
 	<link rel="stylesheet" type="text/css" href="IDE.css">
 	<script src="/navbar.js"></script>
 </head>
 <body>
 	<div id="navbar-container"></div>
-	<div id="problem">
-		<h1 id="title"></h1>
-		<pre id="content"></h1>
-	</div>
+	<h1>Sandbox</h1>
 	<div id="ide"></div>
 	<script src="problem.js"></script>
 </body>
