--- a/views/static/navbar.html
+++ b/views/static/navbar.html
@@ -9,6 +9,7 @@
       <li><a href="/login" id="nav-login">Login</a></li>
       <li><a href="/signup" id="nav-signup">Sign Up</a></li>
       <li><a href="/problems" id="nav-problems">Problems</a></li>
+	  <li><a href="/sandbox" id="nav-sandbox">Sandbox</a></li>
       <li><a href="/userProfile" id="nav-profile">Profile</a></li>
     </ul>
   </div>
