load test cases into a table in problem page

--- a/views/problem.html
+++ b/views/problem.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Gatorbytes - Programming Challenges</title>
 	<link rel="stylesheet" type="text/css" href="IDE.css">
+	<link rel="stylesheet" type="text/css" href="problem.css">
 	<script src="/navbar.js"></script>
 </head>
 <body>
@@ -12,6 +13,9 @@
 		<pre id="content"></h1>
 	</div>
 	<div id="ide"></div>
+	<div id="test-cases">
+		<p>Test Cases</p>
+	</div>
 	<script src="problem.js"></script>
 </body>
 </html>
