added test execution

--- a/views/IDE.html
+++ b/views/IDE.html
@@ -10,8 +10,8 @@
 	<div id="ide">
 		<div id="editor"></div>
 
-		<div id="interaction-container">
-			<button id = "run-code" type="button" onclick="runCode()">run code</button>
+		<div class="interaction-container">
+			<button id = "run-code" class="execution-request" type="button" onclick="runUserCode()">run code</button>
 			<select id="language-dropdown"></select>
 		</div>
 		
