--- a/views/problem.html
+++ b/views/problem.html
@@ -13,8 +13,10 @@
 		<pre id="content"></h1>
 	</div>
 	<div id="ide"></div>
-	<div id="test-cases">
+	<div id="test-cases">	
 		<p>Test Cases</p>
+		<button id = "run-tests" class="execution-request" type="button" onclick="runTests()">run tests</button>
+		<table id="test-case-table"></table>
 	</div>
 	<script src="problem.js"></script>
 </body>
