--- a/views/static/problem.css
+++ b/views/static/problem.css
@@ -2,6 +2,11 @@
 	border: 1px solid #AAAAAA;
 }
 
+#test-cases table tr td {
+	width: 300px;
+	white-space: pre-wrap;
+}
+
 #test-cases table tr td:hover {
-	background-color: #888888;
+	background-color: #EEEEEE;
 }
