added solution section, including language, code, and explanation

--- a/views/problem.html
+++ b/views/problem.html
@@ -22,6 +22,9 @@
 			</tr>
 		</table>
 	</div>
+	<br>
+	<button onclick="revealSolution()" type="button">show solution</button>
+	<div id="solution" style="display: none;"></div>
 	<script src="problem.js"></script>
 </body>
 </html>
