--- a/views/login.html
+++ b/views/login.html
@@ -9,15 +9,20 @@
 </head>
 <body>
   <div id="navbar-container"></div>
-  <h1>Login</h1>
-  <form action="/postLogin" method="post"> 
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <button type="submit">Login</button>
-  </form>
+  <div class="container">
+    <h1>Login</h1>
+    <form action="/postLogin" method="post"> 
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required>
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required>
+
+      <button type="submit">Login</button>
+    </form>
+    <div class="signup-link">
+      <p>Don't have an account? <a href="/signup">Sign up here</a></p>
+    </div>
+  </div>
 </body>
 </html>
