--- a/views/signup.html
+++ b/views/signup.html
@@ -13,8 +13,12 @@
         <h1>Sign Up</h1>
         <form id="signup-form" action="/signUp" method="post">
             <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
                 <label for="email">Email</label>
-                <input type="text" id="email" name="email" required>
+                <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
