--- a/views/editProfile.html
+++ b/views/editProfile.html
@@ -14,13 +14,13 @@
 
     <form id="editForm" method="POST" action="/user/update">
       <label for="username">New Username:</label>
-      <input type="text" id="username" name="username" required />
+      <input type="text" id="username" name="username" placeholder="Leave blank to keep current" />
 
       <label for="email">New Email:</label>
-      <input type="email" id="email" name="email" required />
+      <input type="email" id="email" name="email" placeholder="Leave blank to keep current" />
 
       <label for="password">New Password:</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" placeholder="Leave blank to keep current" />
 
       <button type="submit">Update Profile</button>
     </form>
