--- a/views/static/navbar.html
+++ b/views/static/navbar.html
@@ -8,8 +8,9 @@
       <li><a href="/home" id="nav-home">Home</a></li>
       <li><a href="/login" id="nav-login">Login</a></li>
       <li><a href="/signup" id="nav-signup">Sign Up</a></li>
-      <li><a href="/problems" id="nav-problems">Problems</a></li>
-	  <li><a href="/sandbox" id="nav-sandbox">Sandbox</a></li>
+      <li><a href="/problemset" id="nav-problems">Problems</a></li>
+	    <li><a href="/sandbox" id="nav-sandbox">Sandbox</a></li>
+      <li><a href="/leaderboard" id="nav-leaderboard">Leaderboard</a></li>
       <li><a href="/userProfile" id="nav-profile">Profile</a></li>
     </ul>
   </div>
