--- a/views/problem.html
+++ b/views/problem.html
@@ -10,7 +10,8 @@
 	<div id="navbar-container"></div>
 	<div id="problem">
 		<h1 id="title"></h1>
-		<pre id="content"></h1>
+		<p id="tags"></p>
+		<pre id="content"></pre>
 	</div>
 	<div id="ide"></div>
 	<div id="test-cases">	
