--- a/views/static/IDE.css
+++ b/views/static/IDE.css
@@ -1,7 +1,17 @@
+body {
+	font-family: Arial, sans-serif;
+	background-color: #f4f4f4;
+}
+
+textarea {
+	resize: none;
+	width: 490px;
+	height: 200px;
+}
+
 #editor {
 	position: relative;
 	top: 0;
-	left: 30px;
 	width: 1000px;
 	height: 500px;
 }
@@ -9,10 +19,8 @@
 .interaction-container {
 	display: flex;
 	gap: 10px;
-	
 	position: relative;
 	top: 10px;
-	left: 30px;
 }
 
 #run-code {
@@ -25,9 +33,9 @@
 
 #in-out {
 	position: relative;
+	overflow: hidden;
 	top: 10px;
-	left: 30px;
-	width: 1000px;
+	gap: 10px;
 }
 
 #output {
@@ -35,5 +43,12 @@
 	border: 1px solid #ccc;
 	white-space: pre-wrap;
 	word-wrap: break-word;
-	height: 200px;
+	height: 207px;
+	width: 500px;
+	background-color: white;
+}
+
+#in-out div {
+	width: 500px;
+	float: left;
 }
