--- a/views/static/IDE.css
+++ b/views/static/IDE.css
@@ -23,6 +23,15 @@ textarea {
 	top: 10px;
 }
 
+.interaction-container button, .interaction-container select {
+	padding: 0.5rem 1rem;
+	background-color: #575757;
+	color: white;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
 #run-code {
 	padding: 5px;
 }
