Added/Styled Home Page, Edited Problem Page Styling, Fixed user Acc Deletion, Updating Page Routing(Home as root)

--- a/views/home.html
+++ b/views/home.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang="en">
 <head>
-	<title>GatorBytes</title>>
-	<script src="/navbar.js"></script>
+  <meta charset="UTF-8" />
+  <title>GatorBytes</title>
+  <link rel="stylesheet" href="/home.css" />
+  <script src="/navbar.js"></script>
 </head>
 <body>
-	<div id="navbar-container"></div>
-	<h1>Click here to go to the IDE</h1>>
-	<a href="/IDE"> IDE editor</a>
-	
-	<h1>Click here to go to test problem 1</h1>>
-	<a href="/problem?problemID=test_problem1"> test 1</a>
-	
-	<h1>Click here to go to test problem 2</h1>>
-	<a href="/problem?problemID=test_problem2"> test 2</a>
-	</body>
-</html>
+  <div id="navbar-container"></div>
 
+  <div class="main-container">
+    <h1>Welcome to GatorBytes</h1>
+    <p class="subtitle">
+      Gamified coding practice to level up your programming skills.
+    </p>
+
+    <p class="description">
+      Created by <strong>Joshua Rushlow</strong>, <strong>Gabriel Burger</strong>, and <strong>Gavin Raether</strong>,
+      GatorBytes is a fun and organized way to learn coding through real challenges and tracked progress.
+    </p>
+
+    <div class="links">
+      <a href="/signup" class="link-button">Sign Up</a>
+      <a href="/login" class="link-button">Log In</a>
+    </div>
+  </div>
+</body>
+</html>
