--- a/views/static/navbar.html
+++ b/views/static/navbar.html
@@ -5,7 +5,7 @@
   <div class="navbar-container">
     <a href="/" class="logo">GatorBytes</a>
     <ul class="nav-links">
-      <li><a href="/home" id="nav-home">Home</a></li>
+      <li><a href="/" id="nav-home">Home</a></li>
       <li><a href="/login" id="nav-login">Login</a></li>
       <li><a href="/signup" id="nav-signup">Sign Up</a></li>
       <li><a href="/problemset" id="nav-problems">Problems</a></li>
