--- a/views/static/problem.css
+++ b/views/static/problem.css
@@ -29,15 +29,14 @@ h1 {
     white-space: pre-wrap;
 }
 
-textarea {
-    width: 100%;
-    height: 200px;
+#input-text, #ouptput {
+    width: 90%;
     font-size: 16px;
     margin-bottom: 20px;
 }
 
-#input, #output {
-    margin-bottom: 20px;
+#in-out div {
+	width: 50%;
 }
 
 button, .search-button {
@@ -87,16 +86,14 @@ select {
 
 #ide {
 	width: 100%;
-	height: 400px;
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	margin-bottom: 20px;
 	box-sizing: border-box;
 	overflow: hidden;
-  }
+}
 
 .ace_editor {
 	width: 100% !important;
-	height: 100% !important;
+	height: 400px !important;
 }
-  
