added consistent styling to sandbox page, moved Run Tests button

--- a/views/sandbox.html
+++ b/views/sandbox.html
@@ -3,11 +3,14 @@
 <head>
 	<title>GatorBytes - Sandbox</title>
 	<link rel="stylesheet" type="text/css" href="IDE.css">
+	<link rel="stylesheet" type="text/css" href="problem.css">
 	<script src="/navbar.js"></script>
 </head>
 <body>
 	<div id="navbar-container"></div>
-	<h1>Sandbox</h1>
+	<div id="problem">
+		<h1>Sandbox</h1>
+	</div>
 	<div id="ide"></div>
 	<script src="problem.js"></script>
 </body>
