--- a/views/static/userprofile.css
+++ b/views/static/userprofile.css
@@ -14,7 +14,7 @@ body {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 350px;
+    width: 700px;
 }
 
 h1 {
@@ -91,7 +91,10 @@ h1 {
 .achievement-image {
     width: 100%;
     height: 150px;
-    object-fit: cover;
+    object-fit: contain;
+    object-position: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .achievement-content {
