--- a/views/userProfile.html
+++ b/views/userProfile.html
@@ -51,6 +51,7 @@
                   <div class="achievement-content">
                     <h4>${achievement.title}</h4>
                     <p>${achievement.description}</p>
+                    <p>${achievement.dateReceived}</p>
                   </div>
                 </div>
               `;
