--- a/views/userProfile.html
+++ b/views/userProfile.html
@@ -51,7 +51,14 @@
                   <div class="achievement-content">
                     <h4>${achievement.title}</h4>
                     <p>${achievement.description}</p>
-                    <p>${achievement.dateReceived}</p>
+                    <p>${new Date(achievement.dateReceived).toLocaleString('en-US', {
+                      month: 'numeric',
+                      day: 'numeric',
+                      year: 'numeric',
+                      hour: 'numeric',
+                      minute: '2-digit',
+                      hour12: true,
+                      })}</p>
                   </div>
                 </div>
               `;
