Fixes date styling

--- a/views/userProfile.html
+++ b/views/userProfile.html
@@ -51,7 +51,7 @@
                   <div class="achievement-content">
                     <h4>${achievement.title}</h4>
                     <p>${achievement.description}</p>
-                    <p>${new Date(achievement.dateReceived).toLocaleString('en-US', {
+                    <p class = "achievement-date">${new Date(achievement.dateReceived).toLocaleString('en-US', {
                       month: 'numeric',
                       day: 'numeric',
                       year: 'numeric',
